--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simone-personal-portfolio",
+  "name": "Dev-yemsquare-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
